wrap h1 and h2s in sections and divs

--- a/index.html
+++ b/index.html
@@ -18,10 +18,33 @@
 </head>
 <body>
 
-    <h1>Mold Site</h1>
-    <h2>Why/how does weed mold?</h2>
-    <h2>How do you spot mold?</h2>
-    <h2>How do you prevent mold?</h2>
+    <section>
+        <div>
+            <h1>Cannabis and Mold</h1>
+        </div>
+    </section>
+
+
+
+    <section>
+        <div>
+            <h2>Why/how does weed mold?</h2>
+        </div>
+    </section>
+
+
+    <section>
+        <div>
+            <h2>How do you spot mold?</h2>
+        </div>
+    </section> 
+
+
+    <section>
+        <div>
+            <h2>How do you prevent mold?</h2>
+        </div>
+    </section>
     
 </body>
 </html>
