add paragraphs to intro section and why/how section

--- a/index.html
+++ b/index.html
@@ -24,25 +24,38 @@
         </div>
     </section>
 
-
-
     <section>
         <div>
-            <h2>Why/how does weed mold?</h2>
+            <p>
+                Did you know that cannabis can grow mold? Unfortunately, a lot of people don't and are therefore unknowingly consuming contaminated bud. A lot of people haven't even seen what moldy weed looks like. Well, that is what I hope to change here. I'm going to present you with the facts of why/how mold spreads on cannabis, how to spot it, and ways to prevent it from happening in the first place. 
+            </p>
         </div>
     </section>
 
 
     <section>
         <div>
-            <h2>How do you spot mold?</h2>
+            <h2>Why/how does cannabis grow mold?</h2>
+        </div>
+
+        <div>
+            <p>
+                Cannabis 
+            </p>
+        </div>
+    </section>
+
+
+    <section>
+        <div>
+            <h2>How do you spot mold on cannabis?</h2>
         </div>
     </section> 
 
 
     <section>
         <div>
-            <h2>How do you prevent mold?</h2>
+            <h2>How do you prevent mold on cannabis?</h2>
         </div>
     </section>
     
