--- a/index.html
+++ b/index.html
@@ -40,15 +40,43 @@
 
         <div>
             <p>
-                Cannabis 
+                Cannabis, like any frut or vegetable, contains a degree of water. This water, combined with elements like heat and air circulation, are what causes cannabis to start to grow mold, and can happen both during and after the growing process. During the actual growth and production of the cannabis plants, it is important to make sure the area they are growing in is well ventalated and you can thoroughly moniter the humidity levels. It is also important not to have any uneccesary liquids exposed or around the plants like puddles or open containers. This can potentially evaporate from the solar lamps used during the growing process and disrupt the watering cycle of the plants themselves. One should also make sure their plants are adequetly spaced apart so that each plant has enough room to breath evenly. Withouth keeping any of this in mind, the plants potentially won't have the propper conditions to regulate their water levels and will hold onto excess. This excess is what can cause the plant to begin to mold from the inside out. This is why it is also important to defan, take off the big leaves, from your plants too. That is another way they hold onto water. All of this can be applied to plants that have been cut down too. During the drying process, you want to take these exact same precaucions. If not, you will be dealing with the various photos being shown. And lastly, when storing your dried buds, it is important to make sure they are fully dry. If you store buds that have not been properly dried, that container will become a breeding ground for mold and can infect your entire container. The lack of airflow will speed this up even more. 
             </p>
         </div>
+
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-25" src="mold/mold_bud (1).jpeg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-25" src="mold/mold_bud (1.5).jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-25" src="mold/mold_bud (2).jpeg" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
     </section>
 
 
     <section>
         <div>
             <h2>How do you spot mold on cannabis?</h2>
+        </div>
+
+        <div>
+            <p>
+                Spotting mold on cannabis can be tricky if it's in the early stages, and is very noticible during the Xenomorph hatching, as I like to put it. Mold on cannabis will often be white in color and look similar to spiders silk. Don't be fooled. It is not extra kiefy and won't get you more high. It will actually make you wuite sick. Colas, or the very top buds are the most succeptable to mold being they are the largest buds on the plant. And with them being the biggest, they hold the most amount of water. When searching for mold in any bud it is important to gently open the bud up so as to spread as little to no mold spores. They can and will infect your other plants. It is suggested to break down the bigger buds so that more air can circulate through 
+            </p>
         </div>
     </section> 
 
@@ -57,7 +85,27 @@
         <div>
             <h2>How do you prevent mold on cannabis?</h2>
         </div>
+
+        <div>
+            <p>
+                Preventing mold on cannabis is pretty simple. If anything, you simply have to do the opposite of what I mentioned earlier. 
+            </p>
+        </div>
     </section>
     
+     <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script>
+      $(function () {
+        $(document).scroll(function(){
+          var $nav = $("#mainNavbar");
+          $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+        });
+      });
+    </script>
 </body>
 </html>
