--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <!-- Google Font -->
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
@@ -14,13 +14,36 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="app.css">
 
+
     <title>Mold</title>
 </head>
 <body>
 
-    <section>
-        <div>
-            <h1>Cannabis and Mold</h1>
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+        <a href="#" class="navbar-brand">Cannabis And Mold</a>
+        <button class=" navbar-toggler" data-toggle="collapse" data-target="#navlinks" aria-lable="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navLinks">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Mold Facts</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Mold Pictures</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <section class="cotainer-fluid px-0">
+        <div class="row align-items-center">
+            <div>
+                <h1>Cannabis and Mold</h1>
+            </div>
         </div>
     </section>
 
