center 'Did you know' text and first h2

--- a/index.html
+++ b/index.html
@@ -41,25 +41,37 @@
 
     <section class="cotainer-fluid px-0">
         <div class="row align-items-center">
-            <div>
-                <h1>Cannabis and Mold</h1>
+            <div class="col align-items-center">
+                <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+                    <h1>Cannabis and Mold</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cotainer-fluid px-0">
+        <div class="row align-items-center">
+            <div class="col align-items-center">
+                <div id="headingGroup" class="text-center d-none d-lg-block mt-5">
+                    <p>
+                        Did you know that cannabis can grow mold? Unfortunately, a lot of people don't and are therefore unknowingly consuming contaminated bud. A lot of people haven't even seen what moldy weed looks like. Well, that is what I hope to change here. I'm going to present you with the facts of why/how mold spreads on cannabis, how to spot it, and ways to prevent it from happening in the first place. 
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cotainer-fluid px-0">
+        <div class="row align-items-center">
+            <div class="col align-items-center">
+                <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+                    <h2>Why/how does cannabis grow mold?</h2>
+                </div>
             </div>
         </div>
     </section>
 
     <section>
-        <div>
-            <p>
-                Did you know that cannabis can grow mold? Unfortunately, a lot of people don't and are therefore unknowingly consuming contaminated bud. A lot of people haven't even seen what moldy weed looks like. Well, that is what I hope to change here. I'm going to present you with the facts of why/how mold spreads on cannabis, how to spot it, and ways to prevent it from happening in the first place. 
-            </p>
-        </div>
-    </section>
-
-
-    <section>
-        <div>
-            <h2>Why/how does cannabis grow mold?</h2>
-        </div>
 
         <div>
             <p>
