start on aligning first slide show and why/how

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <section class="cotainer-fluid px-0">
         <div class="row align-items-center">
-            <div class="col align-items-center">
+            <div class="col align-">
                 <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
                     <h2>Why/how does cannabis grow mold?</h2>
                 </div>
@@ -71,12 +71,12 @@
         </div>
     </section>
 
-    <section>
 
-        <div>
-            <p>
-                Cannabis, like any frut or vegetable, contains a degree of water. This water, combined with elements like heat and air circulation, are what causes cannabis to start to grow mold, and can happen both during and after the growing process. During the actual growth and production of the cannabis plants, it is important to make sure the area they are growing in is well ventalated and you can thoroughly moniter the humidity levels. It is also important not to have any uneccesary liquids exposed or around the plants like puddles or open containers. This can potentially evaporate from the solar lamps used during the growing process and disrupt the watering cycle of the plants themselves. One should also make sure their plants are adequetly spaced apart so that each plant has enough room to breath evenly. Withouth keeping any of this in mind, the plants potentially won't have the propper conditions to regulate their water levels and will hold onto excess. This excess is what can cause the plant to begin to mold from the inside out. This is why it is also important to defan, take off the big leaves, from your plants too. That is another way they hold onto water. All of this can be applied to plants that have been cut down too. During the drying process, you want to take these exact same precaucions. If not, you will be dealing with the various photos being shown. And lastly, when storing your dried buds, it is important to make sure they are fully dry. If you store buds that have not been properly dried, that container will become a breeding ground for mold and can infect your entire container. The lack of airflow will speed this up even more. 
-            </p>
+    <section class="container-fluid px-0">
+        <div class="row align-items-center content">
+            <div class="col-md-6 text-center order-1 order-md-2">
+
+            </div>
         </div>
 
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
