resize carousels from 6 to 4

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <section class="cotainer-fluid px-0">
         <div class="row align-items-center">
-            <div class="col-md-6 order-2 order-md-1">
+            <div class="col-md-4 order-2 order-md-1">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -111,13 +111,14 @@
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>How do you spot mold on cannabis?</h2>
+                        <img id="potLeaf" src="mold/marijuana.png" alt="">
                         <p class="lead">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam ipsa rerum porro eum dolorem doloremque dolorum, repellendus sed ea laboriosam non sequi! Sed commodi assumenda deleniti eum corrupti. Quas, illo.
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 ">
+            <div class="col-md-4 ">
                 <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -151,7 +152,7 @@
 
         
         <div class="row align-items-center">
-            <div class="col-md-6 ">
+            <div class="col-md-4 ">
                 <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
