add background color to mold facts and resize h2/p

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         </div>
     </section>
 
-    <section class="cotainer-fluid px-0 pb-5">
+    <section class="cotainer-fluid px-5 pb-5">
         <div class="row align-items-center">
             <div class="col align-items-center">
                 <div id="headingGroup" class="text-center d-none d-lg-block mt-5">
                     <p>
-                        Did you know that cannabis can grow mold? Unfortunately, a lot of people don't and are therefore unknowingly consuming contaminated bud. A lot of people haven't even seen what moldy weed looks like. Well, that is what I hope to change here. I'm going to present you with the facts of why/how mold spreads on cannabis, how to spot it, and ways to prevent it from happening in the first place. 
+                        Did you know that cannabis can grow mold? <br> Unfortunately, a lot of people don't and are therefore unknowingly consuming contaminated bud. A lot of people haven't even seen what moldy weed looks like. <br> Well, that is what I hope to change here. I'm going to present you with the facts of why/how mold spreads on cannabis, how to spot it, and ways to prevent it from happening in the first place. 
                     </p>
                 </div>
             </div>
@@ -94,9 +94,9 @@
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0 py-5">
                         <h2>Why/how does cannabis grow mold?</h2>
-                        <img id="potLeaf" src="mold/marijuana.png" alt="">
+                        <img id="potLeaf" src="mold/marijuana.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">
                             Cannabis can mold for a variety of reasons including <br>
                             *Humidity <br>
@@ -115,7 +115,7 @@
         <div class="row align-items-center">
             <div class="col-md-6 text-center ">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0 py-5">
                         <h2>How do you spot mold on cannabis?</h2>
                         <img id="potLeaf" src="mold/marijuana.png" alt="">
                         <p class="lead">
@@ -193,7 +193,7 @@
             </div>
             <div class="col-md-6 text-center pb-5">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0 py-5">
                         <h2>How do you prevent mold on cannabis?</h2>
                         <img id="potLeaf" src="mold/marijuana.png" alt="">
                         <p class="lead">
