add styles to mainNavbar, h1, and first p

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <div class="row align-items-center">
             <div class="col align-items-center">
                 <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
-                    <h1>Cannabis and Mold</h1>
+                    <h1 class="border-bottom border-dark">Cannabis and Mold</h1>
                 </div>
+                
             </div>
         </div>
     </section>
@@ -95,7 +96,7 @@
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0 py-5">
-                        <h2>Why/how does cannabis grow mold?</h2>
+                        <h2>How does cannabis grow mold?</h2>
                         <img id="potLeaf" src="mold/marijuana.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">
                             Cannabis can mold for a variety of reasons including <br>
@@ -116,7 +117,7 @@
             <div class="col-md-6 text-center ">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0 py-5">
-                        <h2>How do you spot mold on cannabis?</h2>
+                        <h2>How to spot mold on cannabis?</h2>
                         <img id="potLeaf" src="mold/marijuana.png" alt="">
                         <p class="lead">
                             Spotting mold can be tricky, but there are signs to look out for<br>
@@ -167,17 +168,17 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <div class="d-flex justify-content-center">
-                            <img class="d-block w-50" src="mold/mold_bud (4).jpeg" alt="First slide">
+                            <img class="d-block w-50" src="mold/mold_bud (6).jpeg" alt="First slide">
                         </div>
                       </div>
                       <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <img class="d-block w-50" src="mold/mold_bud (4.5).jpg" alt="Second slide">
+                            <img class="d-block w-50" src="mold/mold_bud (6.5).jpg" alt="Second slide">
                         </div> 
                       </div>
                       <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <img class="d-block w-50" src="mold/mold_bud (5).jpeg" alt="Third slide">
+                            <img class="d-block w-50" src="mold/mold_bud (7).jpeg" alt="Third slide">
                         </div> 
                       </div>
                     </div>
@@ -194,7 +195,7 @@
             <div class="col-md-6 text-center pb-5">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0 py-5">
-                        <h2>How do you prevent mold on cannabis?</h2>
+                        <h2>How to prevent mold on cannabis?</h2>
                         <img id="potLeaf" src="mold/marijuana.png" alt="">
                         <p class="lead">
                             Preventing mold can be very simple if the propper steps are followed <br>
