make border padding 5 for h1

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                     <a href="" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Mold Facts</a>
+                    <a href="" class="nav-link">Facts</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Mold Pictures</a>
+                    <a href="" class="nav-link">Pictures</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <section class="cotainer-fluid px-0 pt-5">
+    <section class="cotainer-fluid px-5 pt-5">
         <div class="row align-items-center">
             <div class="col align-items-center">
                 <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
