fix navbar collapse issue and mt for md size reason why mold

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
 
-    <nav id="mainNavbar" class="navbar navbar-dark bg-dark navbar-expand-md py-0 fixed-top">
-        <a href="#" class="navbar-brand">Cannabis And Mold</a>
-        <button class=" navbar-toggler" data-toggle="collapse" data-target="#navlinks" aria-lable="Toggle navigation">
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+        <a href="#" class="navbar-brand">Cannabis</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-lable="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navLinks">
@@ -43,7 +43,7 @@
         <div class="row align-items-center">
             <div class="col align-items-center">
                 <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
-                    <h1 class="border-bottom border-dark">Cannabis and Mold</h1>
+                    <h1 class="border-bottom border-dark py-3">Cannabis and Mold</h1>
                 </div>
                 
             </div>
@@ -74,12 +74,12 @@
                       </div>
                       <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <img class="d-block w-50" src="mold/mold_bud (1.5).jpg" alt="Second slide">
+                            <img class="d-block w-50" src="mold/mold_bud (40).jpg" alt="Second slide">
                         </div> 
                       </div>
                       <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <img class="d-block w-50" src="mold/mold_bud (2).jpeg" alt="Third slide">
+                            <img class="d-block w-50" src="mold/mold_bud (50).jpg" alt="Third slide">
                         </div> 
                       </div>
                     </div>
@@ -93,7 +93,7 @@
                     </a>
                   </div>
             </div>
-            <div class="col-md-6 text-center order-1 order-md-2">
+            <div class="col-md-6 text-center order-1 order-md-2 mt-5">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0 py-5">
                         <h2>How does cannabis grow mold?</h2>
@@ -121,7 +121,7 @@
                         <img id="potLeaf" src="mold/marijuana.png" alt="">
                         <p class="lead">
                             Spotting mold can be tricky, but there are signs to look out for<br>
-                            *White, cottony, silky like supstance like spiders web can be seen<br>
+                            *White, cottony, silky supstance like spiders web can be seen<br>
                             *It is often found close to the stem<br>
                             *Look in larger buds such as colas <br>
                             *Mold can turn black if conditions are really bad<br>
@@ -139,7 +139,7 @@
                       </div>
                       <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <img class="d-block w-50" src="mold/mold_bud (3).jpeg" alt="Second slide">
+                            <img class="d-block w-50" src="mold/mold_bud (9).jpeg" alt="Second slide">
                         </div> 
                       </div>
                       <div class="carousel-item">
@@ -163,7 +163,7 @@
 
         
         <div class="row align-items-center pb-5">
-            <div class="col-md-5 py-5">
+            <div class="col-md-5 order-2 order-md-1 py-5">
                 <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -173,7 +173,7 @@
                       </div>
                       <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <img class="d-block w-50" src="mold/mold_bud (6.5).jpg" alt="Second slide">
+                            <img class="d-block w-50" src="mold/mold_bud (42).jpg" alt="Second slide">
                         </div> 
                       </div>
                       <div class="carousel-item">
@@ -192,7 +192,7 @@
                     </a>
                   </div>
             </div>
-            <div class="col-md-6 text-center pb-5">
+            <div class="col-md-6 text-center order-1 order-md-2 pb-5">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0 py-5">
                         <h2>How to prevent mold on cannabis?</h2>
